--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,19 @@
     "version": "1.0",
   
     "browser_action": {
-     "default_icon": "icon.png",
-     "default_popup": "popup.html"
+        "default_icon": "icon.png",
+        "default_popup": "popup.html",
+        "default_title": "Storeless"
     },
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "all_frames": true,
+        "js":      [
+            "scripts/jquery.min.js",
+            "scripts/content.js"
+        ]
+    }],
     "permissions": [
-     "activeTab"
+        "activeTab"
     ]
 }
